# libcommon

./: .gitignore  AStar.h  CMakeLists.txt  CellSpacePartition.h  Clock.cpp  Clock.h  Color.h  DriverFramework.cpp  DriverFramework.h  Entity.h  FontConfig.h  Geometry.cpp  Geometry.h  GeometryTest.cpp  LICENSE  Line.cpp  Line.h  LineQuadTree.h  Makefile  Math.cpp  Math.h  MathTest.cpp  Matrix22.cpp  Matrix22.h  Matrix44.cpp  Matrix44.h  Partition.h  QuadTree.h  QuadtreeTest.cpp  Quaternion.cpp  Quaternion.h  README  Random.cpp  Random.h  Rectangle.h  SDLSurface.cpp  SDLSurface.h  SDL_utils.cpp  SDL_utils.h  Serialization.h  (+10 more)
src/: Color.h  Math.cpp  Math.h  Texture.cpp  Texture.h
